--- a/apps/examples/iterator_example/CMakeLists.txt
+++ b/apps/examples/iterator_example/CMakeLists.txt
@@ -12,6 +12,9 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(typesafe_example)
-add_subdirectory(iterator_example)
-add_subdirectory(pearl_example)
+ptah_add_executable(iterator_example
+    SOURCES
+        iterator_example.c
+    DEPENDENCIES
+        samrena
+)
