--- a/libs/samneural/CMakeLists.txt
+++ b/libs/samneural/CMakeLists.txt
@@ -12,8 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(typesafe_example)
-add_subdirectory(iterator_example)
-add_subdirectory(samset_example)
-add_subdirectory(sam_mnist)
-add_subdirectory(sdl_example)
+ptah_add_library(samneural
+    SOURCES
+        src/samneural.c
+    PUBLIC_HEADERS
+        include/samneural.h
+    DEPENDENCIES
+        samrena
+        samdata
+)
