Now have some new rng exmamples

--- a/apps/examples/samrng_example/CMakeLists.txt
+++ b/apps/examples/samrng_example/CMakeLists.txt
@@ -12,9 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(typesafe_example)
-add_subdirectory(iterator_example)
-add_subdirectory(samset_example)
-add_subdirectory(samrng_example)
-add_subdirectory(sam_mnist)
-add_subdirectory(sdl_example)
+ptah_add_executable(samrng_example
+    SOURCES
+        src/main.c
+    DEPENDENCIES
+        samdata
+        samrena
+)
+
+target_link_libraries(samrng_example PRIVATE m)
