--- a/apps/examples/sdl_example/CMakeLists.txt
+++ b/apps/examples/sdl_example/CMakeLists.txt
@@ -19,7 +19,7 @@ include(${CMAKE_SOURCE_DIR}/cmake/PtahLibraryManager.cmake)
 ptah_add_library(
     NAME SDL3
     GIT_REPOSITORY https://github.com/libsdl-org/SDL
-    VERSION release-3.2.18
+    VERSION main
     BUILD_SYSTEM cmake
     CMAKE_ARGS
         -DSDL_STATIC=ON
