Vibe coded in vulkan

--- a/apps/examples/sam_mnist/CMakeLists.txt
+++ b/apps/examples/sam_mnist/CMakeLists.txt
@@ -19,6 +19,7 @@ ptah_add_executable(sam_mnist
     DEPENDENCIES
         samneural
         samrena
+        samvulkan
 )
 
 # Add include directory for the mnist_loader header
