--- a/libs/samcl/CMakeLists.txt
+++ b/libs/samcl/CMakeLists.txt
@@ -12,10 +12,19 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory(typesafe_example)
-add_subdirectory(iterator_example)
-add_subdirectory(samset_example)
-add_subdirectory(samrng_example)
-add_subdirectory(sam_mnist)
-add_subdirectory(sdl_example)
-add_subdirectory(samcl_example)
+ptah_add_library(samcl
+    SOURCES
+        src/samcl.c
+    PUBLIC_HEADERS
+        include/samcl.h
+)
+
+if(BUILD_TESTING)
+    ptah_add_executable(samcl_test
+        SOURCES
+            test/samcl_test.c
+        DEPENDENCIES
+            samcl
+    )
+    add_test(NAME samcl_basic COMMAND samcl_test)
+endif()
