--- a/libs/samrena/CMakeLists.txt
+++ b/libs/samrena/CMakeLists.txt
@@ -12,64 +12,17 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Platform detection for virtual memory support
-if(WIN32)
-    set(SAMRENA_HAS_VIRTUAL_MEMORY_DEFAULT ON)
-    set(SAMRENA_VM_PLATFORM "win32")
-elseif(UNIX)
-    set(SAMRENA_HAS_VIRTUAL_MEMORY_DEFAULT ON)
-    if(APPLE)
-        set(SAMRENA_VM_PLATFORM "darwin")
-    else()
-        set(SAMRENA_VM_PLATFORM "posix")
-    endif()
-else()
-    set(SAMRENA_HAS_VIRTUAL_MEMORY_DEFAULT OFF)
-    set(SAMRENA_VM_PLATFORM "none")
-endif()
-
-# User option to override
-option(SAMRENA_ENABLE_VIRTUAL 
-       "Enable virtual memory adapter" 
-       ${SAMRENA_HAS_VIRTUAL_MEMORY_DEFAULT})
-
-# Feature summary
-if(SAMRENA_ENABLE_VIRTUAL)
-    message(STATUS "Samrena: Virtual memory adapter enabled (${SAMRENA_VM_PLATFORM})")
-else()
-    message(STATUS "Samrena: Virtual memory adapter disabled")
-endif()
-
-# Conditional source files
+# Source files - virtual memory is always enabled
 set(SAMRENA_SOURCES
     src/samrena.c
     src/samrena_vector.c
-    src/adapters/chained_adapter.c
 )
-
-if(SAMRENA_ENABLE_VIRTUAL)
-    list(APPEND SAMRENA_SOURCES
-        src/adapters/virtual_adapter.c
-    )
-endif()
 
 ptah_add_library(samrena
     SOURCES ${SAMRENA_SOURCES}
     PUBLIC_HEADERS
         include/samrena.h
         include/samvector.h
-)
-
-# Generate config header
-configure_file(
-    "${CMAKE_CURRENT_SOURCE_DIR}/src/samrena_config.h.in"
-    "${CMAKE_CURRENT_BINARY_DIR}/samrena_config.h"
-    @ONLY
-)
-
-# Add generated header to include path
-target_include_directories(samrena PRIVATE 
-    ${CMAKE_CURRENT_BINARY_DIR}
 )
 
 # Build tests if testing is enabled
