Started making apps

--- a/apps/spikes/samplex/CMakeLists.txt
+++ b/apps/spikes/samplex/CMakeLists.txt
@@ -15,7 +15,10 @@
 ptah_add_executable(samplex
     SOURCES
         src/main.c
+        src/plex.c
     DEPENDENCIES
+        samrena
+        samdata
         PostgreSQL::PostgreSQL
         uring
 )
