--- a/apps/samtrader/my_config.ini
+++ b/apps/samtrader/my_config.ini
@@ -1,4 +1,5 @@
 ; samtrader config - Sam's local setup
+; ASX200 portfolio backtest: 15 major stocks
 
 [database]
 conninfo = postgresql://sam:password@127.0.0.1:5432/samtrader
@@ -11,20 +12,20 @@ slippage_pct = 0.001
 allow_shorting = false
 risk_free_rate = 0.05
 
-; Backtest CBA on ASX over 5 years
+; Backtest 15 ASX200 stocks over 5 years
 start_date = 2020-01-01
 end_date = 2024-12-31
-code = CBA
+codes = CBA, BHP, WBC, NAB, ANZ, CSL, WOW, WES, MQG, FMG, TLS, RIO, WDS, ALL, TCL
 exchange = AU
 
 [strategy]
-name = SMA Crossover
-description = Buy on 20/50 SMA golden cross, sell on death cross
+name = ASX200 SMA Crossover
+description = SMA 20/50 golden cross strategy across 15 major ASX200 stocks
 
 entry_long = CROSS_ABOVE(SMA(20), SMA(50))
 exit_long = CROSS_BELOW(SMA(20), SMA(50))
 
-position_size = 0.25
+position_size = 0.10
 stop_loss = 5.0
 take_profit = 0.0
-max_positions = 1
+max_positions = 10
